--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-// .env
-MONGO_URI=mongodb://root:<mongo_password>@<mongo_host>:27017/usermngtservice?authSource=admin
+MONGO_URI=mongodb://root:4rjKE1HH6olj95uAbGFGgzDA@172.21.113.23:27017/usermngtservice?authSource=admin
 PORT=5000
-    
+        
